feat(notification): switch notifications for user per organization
