# chat/docs/swagger.json
@@ -280,6 +280,51 @@
                 }
             }
         },
+        "/notification/switch": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Включает или выключает уведомления.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "notification"
+                ],
+                "summary": "Включает или выключает уведомления.",
+                "parameters": [
+                    {
+                        "description": "Параметры запроса",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.NotificationUpdateReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Статус уведомлений изменен",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Некорректный запрос",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/session/list": {
             "get": {
                 "security": [
@@ -629,6 +674,22 @@
             "properties": {
                 "id": {
                     "type": "string"
+                }
+            }
+        },
+        "model.NotificationUpdateReq": {
+            "type": "object",
+            "required": [
+                "active",
+                "organization_id"
+            ],
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "organization_id": {
+                    "type": "integer",
+                    "minimum": 1
                 }
             }
         },
