# chat/internal/notification/model/dao.go
@@ -1,0 +1,9 @@
+package model
+
+// NotificationDao модель подписки на уведомления.
+type NotificationDao struct {
+	Email          string
+	FirstName      string
+	LastName       string
+	OrganizationID int64
+}
